--- a/trabalho2/database/db.config.json
+++ b/trabalho2/database/db.config.json
@@ -1,6 +1,6 @@
 {
-    "host": "localhost",
-    "password": "321321",
-    "user": "breno",
-    "database": "trabalho2"
+    "host": "200.129.44.249",
+    "password": "514513@fbd",
+    "user": "514513",
+    "database": "514513"
 }
